# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")

STACK_DIR = "$NEARLINK_ROOT/services/stack"
shared_stack_include_dirs = [
    "$NEARLINK_ROOT/services/stack/src/sdf/bsl/stm/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/link/include",
    "$NEARLINK_ROOT/services/stack/src/dli/common",
    "$NEARLINK_ROOT/services/stack/src/sdf/oal/thread/include",
    "$NEARLINK_ROOT/services/stack/src/nai/naifwk/include",
    "$NEARLINK_ROOT/services/stack/src/dli/thread/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/oal/timer/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/sm/include/inner",
    "$NEARLINK_ROOT/services/stack/src/dli/sapi/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/interface",
    "$NEARLINK_ROOT/services/stack/src/nai/api/include/common",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/sm/include",
    "$NEARLINK_ROOT/services/stack/src/dp/transport/interface",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/dft/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/cfgdb/include",
    "$NEARLINK_ROOT/services/stack/src/dp/transport/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/utils/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/sdffwk/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/hadm/src",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/public/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/oal/evc/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/dfx/errno/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/bsl/dsl/include",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/log/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/internal",
    "$NEARLINK_ROOT/services/stack/src/sdf/oal/memm/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/dfx/trace/include",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/schedule/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/hadm/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/qosm/interface",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/qosm/autorate/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/sm/src",
    "$NEARLINK_ROOT/services/stack/src/nai/crypto/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/include",
    "$NEARLINK_ROOT/services/stack/src/dli",
    "$NEARLINK_ROOT/services/stack/src/dp/dtap/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/qosm/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/dfx/log/include",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/dfx/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/servm/ssap/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/servm/ssap/src",
    "$NEARLINK_ROOT/services/stack/src/dli/dft/include",
    "$NEARLINK_ROOT/services/stack/src/nai/dft/include",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/dft/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/common/include",
    "$NEARLINK_ROOT/services/stack/src/nai/api/include/uapi_func",
    "$NEARLINK_ROOT/services/stack/src/dli/event/include",
    "$NEARLINK_ROOT/services/stack/src/dli/layer/include",
    "$NEARLINK_ROOT/services/stack/src/cp/nlstkfwk/cfgdb/include/inner",
    "$NEARLINK_ROOT/services/stack/src/dp/dpfwk/errcode",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/dyntrans/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/icb/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/hadm/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/servm/ssap/include",
    "$NEARLINK_ROOT/services/stack/src/dli/cmd/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/oal/sig/lock/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/cm/signaling/include",
    "$NEARLINK_ROOT/services/stack/src/nai/slem/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/interface",
    "$NEARLINK_ROOT/services/stack/src/dp/dtap/interface",
    "$NEARLINK_ROOT/services/stack/src/dp/dpfwk/log",
    "$NEARLINK_ROOT/services/stack/src/nai/nlm/include",
    "$NEARLINK_ROOT/services/stack/src/utils/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/cdsm/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/cdsm/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/actm/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/actm/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/mctl/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/mctl/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/mctl/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/cctl/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/cctl/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/cctl/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/micp/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/audioctl/micp/include/inner",
    "$NEARLINK_ROOT/utils/include",
    "$NEARLINK_ROOT/services/hardware/include",
    "$NEARLINK_ROOT/test/fuzztest/nl_utils",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/icce/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/icce/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/icce/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/port/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/port/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/port/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/dis/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/dis/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/hid/include/inner",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/hid/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/hid/src",
    "$NEARLINK_ROOT/services/stack/src/sl",
    "$NEARLINK_ROOT/services/stack/src/sl/include",
    "$NEARLINK_ROOT/services/stack/src/sl/interface",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/bas/src",
    "$NEARLINK_ROOT/services/stack/src/cp/bal/profile/bas/include",
    "$NEARLINK_ROOT/services/stack/src/sdf/interface",
    "$NEARLINK_ROOT/services/stack/src/dli/interface",
    "$NEARLINK_ROOT/services/stack/src/adapter/include",
    "$NEARLINK_ROOT/services/stack/include/ext",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd",
    "$NEARLINK_ROOT/services/stack/src/collaboration/interface",
    "$NEARLINK_ROOT/services/stack/src/collaboration/internal",
    "$NEARLINK_ROOT/services/stack/src/collaboration/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/collabstm/interface",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/collabstm/internal",
    "$NEARLINK_ROOT/services/stack/src/cp/bsl/sle/devd/collabstm/include",
    "$NEARLINK_ROOT/services/stack/src/cp/bnl/proxy/interface",
]

shared_stack_source = [
    "$STACK_DIR/src/nai/nlm/src/nlstk_init.c",
    "$STACK_DIR/src/nai/slem/src/slem.c",
    "$STACK_DIR/src/nai/slem/src/sle_dli_layer.c",
    "$STACK_DIR/src/nai/crypto/src/sle_crypto.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_channel.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_scheduler.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_frame.c",
    "$STACK_DIR/src/dp/dtap/src/dtap.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_trans_transparent.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_trans.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_trans_basic.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_frame_basic.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_frame_enhance.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_trans_stream.c",
    "$STACK_DIR/src/dp/dtap/src/dtap_trans_reliable.c",
    "$STACK_DIR/src/dp/transport/src/transport_cltp.c",
    "$STACK_DIR/src/dp/transport/src/transport.c",
    "$STACK_DIR/src/dli/dli.c",
    "$STACK_DIR/src/dli/sapi/src/dli_sapi.c",
    "$STACK_DIR/src/dli/sapi/src/dli_data_stub.c",
    "$STACK_DIR/src/dli/cmd/src/dli_cmd.c",
    "$STACK_DIR/src/dli/layer/src/dli_layer.c",
    "$STACK_DIR/src/dli/layer/src/dli_layer_utils.c",
    "$STACK_DIR/src/dli/layer/src/dli_layer_callback.c",
    "$STACK_DIR/src/dli/layer/src/dli_layer_config.c",
    "$STACK_DIR/src/dli/event/src/dli_event.c",
    "$STACK_DIR/src/dli/event/src/dli_secu_event.c",
    "$STACK_DIR/src/dli/event/src/dli_hadm_event.c",
    "$STACK_DIR/src/dli/event/src/dli_connect_event.c",
    "$STACK_DIR/src/dli/event/src/dli_dev_discovery_event.c",
    "$STACK_DIR/src/dli/event/src/dli_factory_event.c",
    "$STACK_DIR/src/dli/event/src/dli_nbc_event.c",
    "$STACK_DIR/src/dli/thread/src/dli_thread.c",
    "$STACK_DIR/src/sdf/dfx/trace/src/sdf_trace.c",
    "$STACK_DIR/src/sdf/dfx/errno/src/sdf_errno.c",
    "$STACK_DIR/src/sdf/dfx/log/src/sdf_log_api.c",
    "$STACK_DIR/src/nai/dft/src/nai_dft.c",
    "$STACK_DIR/src/sdf/oal/evc/src/sdf_event.c",
    "$STACK_DIR/src/sdf/oal/evc/src/sdf_evc.c",
    "$STACK_DIR/src/sdf/oal/memm/src/sdf_mem.c",
    "$STACK_DIR/src/sdf/oal/timer/src/sdf_timer.c",
    "$STACK_DIR/src/sdf/oal/sig/lock/src/sdf_sem.c",
    "$STACK_DIR/src/sdf/oal/sig/lock/src/lock_sem.c",
    "$STACK_DIR/src/sdf/oal/sig/lock/src/lock_mutex.c",
    "$STACK_DIR/src/sdf/oal/thread/src/sdf_worker.c",
    "$STACK_DIR/src/sdf/oal/thread/src/sdf_thread.c",
    "$STACK_DIR/src/sdf/utils/src/sdf_string.c",
    "$STACK_DIR/src/sdf/utils/src/sdf_addr.c",
    "$STACK_DIR/src/sdf/bsl/dsl/src/sdf_slist.c",
    "$STACK_DIR/src/sdf/bsl/dsl/src/sdf_map.c",
    "$STACK_DIR/src/sdf/bsl/dsl/src/sdf_vector.c",
    "$STACK_DIR/src/sdf/bsl/dsl/src/sdf_buff.c",
    "$STACK_DIR/src/sdf/bsl/dsl/src/sdf_dlist.c",
    "$STACK_DIR/src/sdf/bsl/stm/src/sdf_stm.c",
    "$STACK_DIR/src/sdf/sdffwk/src/sdf_util.c",
    "$STACK_DIR/src/cp/nlstkfwk/cfgdb/src/nlstk_cfgdb.c",
    "$STACK_DIR/src/cp/nlstkfwk/dft/src/nlstk_dft.c",
    "$STACK_DIR/src/cp/nlstkfwk/schedule/src/cp_worker.c",
    "$STACK_DIR/src/cp/nlstkfwk/schedule/src/nlstk_schedule.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_icg_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_icg_callback.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_table_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/src/qosm.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/src/qosm_trans_channel.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_autorate.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_autorate_notify.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_autorate_report.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_autorate_common.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_autorate_timeout_process.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_audio_dfx.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_antenna_dfx.c",
    "$STACK_DIR/src/cp/bsl/sle/qosm/autorate/src/qosm_uevent.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/common/src/cm_dli_adapter.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/icb/src/cm_icb_api.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/icb/src/cm_icb_init.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/icb/src/cm_icb_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_event_core.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/sle_logic_link_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_api.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_concurrent_conn.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_link_collab_func.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_trans_channel_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_util.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_exter_cbks_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_access_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/cm_logic_link_listener_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/sle_connect_param.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/link/src/sle_access_dli.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/dyntrans/src/cm_dyn_tcid.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/dyntrans/src/cm_dyn_trans_channel_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/dyntrans/src/cm_dyn_trans_chan_state_mgr.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/signaling/src/cm_signaling_manage.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/signaling/src/cm_signaling_trans_channel.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/signaling/src/cm_signaling_cap.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/signaling/src/cm_signaling_internal.c",
    "$STACK_DIR/src/cp/bsl/sle/cm/signaling/src/cm_signaling_version.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan_api.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_report_parse.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan_manager.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan_util.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan_filter.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_scan_stm.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_local.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_tbl.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/devd_adv.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/nlstk_devd_api.c",
    "$STACK_DIR/src/cp/bsl/sle/devd/src/nlstk_scan_api.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_api.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_config_cm.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_config_dli.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_dft.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_init.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_link_manager.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_listen_cm.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_listen_dli.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_parser_iq.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_sm.c",
    "$STACK_DIR/src/cp/bsl/sle/hadm/src/hadm_user_proc.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_oob.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_numcmp.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_nego.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_noentry.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/nlstk_sm_api.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_auth.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_algos.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_encp.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_dft.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_password.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_dhkey.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_psk.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_passcode.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_stm.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_img.c",
    "$STACK_DIR/src/cp/bsl/sle/sm/src/sm_slink.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_app_link.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_common.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_link_state.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_link.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_manager.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_utils.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_app_link_sm.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_app.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_cache.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_app_util.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_client_api.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssapc_client.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_server_api.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_server_app.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_server_find.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_server_write.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_server.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_service_param.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssaps_service.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/ssap_handle.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/nlstk_ssap_app_client.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/nlstk_ssap_app_link.c",
    "$STACK_DIR/src/cp/bsl/sle/servm/ssap/src/nlstk_ssap_app_server.c",
    "$STACK_DIR/src/utils/src/crc16.c",
    "$STACK_DIR/src/utils/src/time_utils.c",
    "$STACK_DIR/src/cp/bal/audioctl/cdsm/src/cdsm_api.c",
    "$STACK_DIR/src/cp/bal/audioctl/cdsm/src/cdsm_tbl.c",
    "$STACK_DIR/src/cp/bal/audioctl/cdsm/src/cdsm.c",
    "$STACK_DIR/src/cp/bal/audioctl/cdsm/src/cdsm_control.c",
    "$STACK_DIR/src/cp/bal/audioctl/cdsm/src/cdsm_encp.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_control.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_l2hc.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_tbl.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_callback.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_qosm_adapter.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_api.c",
    "$STACK_DIR/src/cp/bal/audioctl/actm/src/actm_ssap.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/mcp_volume_dev.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/mcp_volume_client.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/mcp_utils.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/nlstk_mcp_volume_client.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/mcp_media_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/mctl/src/nlstk_mcp_media_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/ccp_utils.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/ccp_vas_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/nlstk_ccp.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/nlstk_ccp_ccs_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/ccp_ccs_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/cctl/src/nlstk_ccp_vas_server.c",
    "$STACK_DIR/src/cp/bal/audioctl/micp/src/micp_callback.c",
    "$STACK_DIR/src/cp/bal/audioctl/micp/src/micp_client.c",
    "$STACK_DIR/src/cp/bal/audioctl/micp/src/micp_dev.c",
    "$STACK_DIR/src/cp/bal/audioctl/micp/src/nlstk_micp_client.c",
    "$NEARLINK_ROOT/services/hardware/src/SleDliLayerAdapter.cpp",
    "$NEARLINK_ROOT/services/hardware/src/SleDliCallbacks.cpp",
    "$NEARLINK_ROOT/test/fuzztest/nl_utils/fuzztest_utils.cpp",
    "$NEARLINK_ROOT/services/hardware/src/SleDliSnoop.cpp",
    "$NEARLINK_ROOT/services/hardware/src/SleDliThreadUtil.cpp",
    "$STACK_DIR/src/cp/bal/profile/dis/src/dis_client.c",
    "$STACK_DIR/src/cp/bal/profile/dis/src/dis_server.c",
    "$STACK_DIR/src/cp/bal/profile/dis/src/dis_stm.c",
    "$STACK_DIR/src/cp/bal/profile/dis/src/dis_common.c",
    "$STACK_DIR/src/cp/bal/profile/dis/src/nlstk_dis_client.c",
    "$STACK_DIR/src/cp/bal/profile/dis/src/nlstk_dis_server.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/icce_client.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/icce_common.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/icce_server.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/icce_stm.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/icce_utils.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/nlstk_icce_client.c",
    "$STACK_DIR/src/cp/bal/profile/icce/src/nlstk_icce_server.c",
    "$STACK_DIR/src/cp/bal/profile/port/src/port_client.c",
    "$STACK_DIR/src/cp/bal/profile/port/src/port_server.c",
    "$STACK_DIR/src/cp/bal/profile/port/src/port_stm.c",
    "$STACK_DIR/src/cp/bal/profile/port/src/nlstk_port_client.c",
    "$STACK_DIR/src/cp/bal/profile/port/src/nlstk_port_server.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_client.c",
    "$STACK_DIR/src/cp/bal/profile/bas/src/bas_client.c",
    "$STACK_DIR/src/cp/bal/profile/bas/src/bas_common.c",
    "$STACK_DIR/src/cp/bal/profile/bas/src/bas_ssap_cbk.c",
    "$STACK_DIR/src/cp/bal/profile/bas/src/bas_stm.c",
    "$STACK_DIR/src/cp/bal/profile/bas/src/nlstk_bas_client.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_client_api.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_common.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_ssap.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_stm.c",
    "$STACK_DIR/src/cp/bal/profile/hid/src/hid_utils.c",
    "$STACK_DIR/src/adapter/src/dli_reg_ext_func.c",
    "$STACK_DIR/src/adapter/src/dli_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/collab_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/collab_reg_ext_func.c",
    "$STACK_DIR/src/adapter/src/common_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/common_reg_ext_func.c",
    "$STACK_DIR/src/adapter/src/devd_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/devd_reg_ext_func.c",
    "$STACK_DIR/src/adapter/src/qosm_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/qosm_reg_ext_func.c",
    "$STACK_DIR/src/cp/bnl/proxy/src/bnl_proxy.c",
    "$STACK_DIR/src/adapter/src/bnl_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/bnl_reg_ext_func.c",
    "$STACK_DIR/src/adapter/src/hadm_ext_func_wrapper.c",
    "$STACK_DIR/src/adapter/src/hadm_reg_ext_func.c",
]

share_sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    boundary_sanitize = true               # Enable boundary san detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    integer_overflow = true                # Enable integer overflow detection
    ubsan = true                           # Enable some Ubsan options
    debug = false
}