# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")

nearlink_test_utils_path = get_path_info(".", "abspath")
nearlink_framework_path = "$NEARLINK_ROOT/frameworks"
nearlink_test_framework_path = "$NEARLINK_ROOT/test/unittest/frameworks_test"
module_output_path = "nearlink_service/nearlink_service"
nearlink_fuzztest_utils_path = "$NEARLINK_ROOT/test/fuzztest/fuzztest_utils"
MOCK_HOST_SERVER_FILE = "$NEARLINK_ROOT/test/fuzztest/mock/"
MOCK_HOST_SERVER_FILE_TDD = "$NEARLINK_ROOT/test/unittest/mock/"