# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../nearlink_config.gni")
import("../../utils/test_utils.gni")
STACK_DIR = "$NEARLINK_ROOT/services/stack"
##############################fuzztest##########################################
ohos_fuzztest("DisServerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$NEARLINK_ROOT/test/fuzztest/disserver_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    debug = true
  }

  include_dirs = [
    "$NEARLINK_ROOT/utils/include",
    "$NEARLINK_ROOT/services/service/src/permission",
    "$NEARLINK_ROOT/interfaces/inner_api/include",
    "$NEARLINK_ROOT/services/service/src/util",
    "$NEARLINK_ROOT/services/service/src/base",
    "$NEARLINK_ROOT/services/service/src/ssap",
    "$NEARLINK_ROOT/services/service/src/dis",
    "$STACK_DIR/src/nai/slem/include",
  ]

  configs = [ "${nearlink_test_utils_path}:test_utils_config" ]

  sources = [
    "disserver_fuzzer.cpp", ]

  deps = [
    "$NEARLINK_ROOT/services/stack:nearlink_stack",
    "$NEARLINK_ROOT/services/stack/src/sdf:nearlink_stack_sdf",
    "$NEARLINK_ROOT/services/service:nearlink_service_impl",
    "${nearlink_fuzztest_utils_path}:fuzztest_utils_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DisServerFuzzTest",
  ]
}
###############################################################################
