# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../nearlink_config.gni")
import("../../utils/test_utils.gni")

config("fuzztest_utils_config") {
  include_dirs = [
    "${nearlink_fuzztest_utils_path}",
    "$NEARLINK_ROOT/utils/include",
  ]
}

# Only used for test
ohos_static_library("fuzztest_utils_static") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    debug = false
  }
  include_dirs = [
    "$NEARLINK_ROOT/utils/include",
  ]
    deps = [
    "$NEARLINK_ROOT/utils:nearlink_utils",
  ]
  sources = [
    "fuzztest_utils.cpp"
  ]
  external_deps = [
    "c_utils:utils",
  ]

  subsystem_name = "communication"
  part_name = "nearlink_service"
}
